--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <h1>International Climate Finance Flows</h1>
-    <p>Not ready for use. Do not trust.</p>
+    <p>Not ready for use. Do not trust icf.</p>
     <div id='sankey'>
       &nbsp;
     </div>
