--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type='text/javascript'>
       var sankey = new Sankey();
     
-      sankey.stack(0,["Top","Bottom"]);
+      sankey.stack(0,["DECC ICF Budget"]);
       sankey.stack(1,["Merge"]);
       sankey.stack(2,["Good","Bad"]);
     
