--- a/index.html
+++ b/index.html
@@ -33,55 +33,55 @@
       sankey.stack(2,["Good","Bad"]);
     
       sankey.setData([
-        ['DECC ICF Budget',91'KfW'],
-['DECC ICF Budget',70'ADB'],
-['DECC ICF Budget',35'GiZ'],
-['DECC ICF Budget',0.197'Green Investment Bank'],
-['DECC ICF Budget',2'Other'],
-['DECC ICF Budget',25'PIDG'],
-['DECC ICF Budget',782.9'World Bank'],
-['KfW',35'NAMA Facility'],
-['KfW',30'Global Climate Partnership Fund'],
-['KfW',25.5'Get FiT'],
-['ADB',35'International CCS capacity building'],
-['ADB',35.25'CP3 - Asia Climate Partners'],
-['GiZ',35'NAMA Facility'],
-['Green Investment Bank',0.197'Green Investment Bank International Pilot'],
-['Other',0.411'Capital Markets Climate Intiative'],
-['Other',1.8'International 2050 Calculator'],
-['PIDG',25'Green Africa Power'],
-['World Bank',45'Forest Carbon Partnership Facility - Carbon Fund'],
-['World Bank',320'Clean Technology Fund'],
-['World Bank',180.921'Clean Technology Fund'],
-['World Bank',25'International CCS capacity building'],
-['World Bank',50'BioCarbon Fund'],
-['World Bank',7'Programme for Market Readiness'],
-['World Bank',25'Forest Investment Programme'],
-['World Bank',15'Pilot Program for Climate Resilience'],
-['World Bank',25'Scaling up Renewable Energy'],
-['World Bank',40'CP3 - Catalyst Fund'],
-['World Bank',15'Colombia Silvopastoral Systems'],
-['World Bank',35'Carbon Market Finance'],
-['NAMA Facility',70'Improve architecture for climate finance'],
-['Global Climate Partnership Fund',30'Drive private investment'],
-['Get FiT',25.5'Drive private investment'],
-['International CCS capacity building',60'Support deployment of technologies critical to 2 degree goal'],
-['CP3 - Catalyst Fund',40'Drive private investment'],
-['CP3 - Asia Climate Partners',35.25'Drive private investment'],
-['Green Investment Bank International Pilot',0.197'Drive private investment'],
-['Capital Markets Climate Intiative',0.411'Drive private investment'],
-['International 2050 Calculator',1.8'Build capacity to respond to climate change'],
-['Green Africa Power',25'Drive private investment'],
-['Forest Carbon Partnership Facility - Carbon Fund',45'Protect forests'],
-['Clean Technology Fund',320'Drive private investment'],
-['Clean Technology Fund',180.921'Improve architecture for climate finance'],
-['BioCarbon Fund',50'Protect forests'],
-['Programme for Market Readiness',7'Build capacity to respond to climate change'],
-['Forest Investment Programme',25'Protect forests'],
-['Pilot Program for Climate Resilience',15'Adapting to climate change'],
-['Scaling up Renewable Energy',25'Support deployment of technologies critical to 2 degree goal'],
-['Colombia Silvopastoral Systems',15'Protect forests'],
-['Carbon Market Finance',35'Improve architecture for climate finance']
+['DECC ICF Budget',91,'KfW'],
+['DECC ICF Budget',70,'ADB'],
+['DECC ICF Budget',35,'GiZ'],
+['DECC ICF Budget',0.197,'Green Investment Bank'],
+['DECC ICF Budget',2,'Other'],
+['DECC ICF Budget',25,'PIDG'],
+['DECC ICF Budget',782.9,'World Bank'],
+['KfW',35,'NAMA Facility'],
+['KfW',30,'Global Climate Partnership Fund'],
+['KfW',25.5,'Get FiT'],
+['ADB',35,'International CCS capacity building'],
+['ADB',35.25,'CP3 - Asia Climate Partners'],
+['GiZ',35,'NAMA Facility'],
+['Green Investment Bank',0.197,'Green Investment Bank International Pilot'],
+['Other',0.411,'Capital Markets Climate Intiative'],
+['Other',1.8,'International 2050 Calculator'],
+['PIDG',25,'Green Africa Power'],
+['World Bank',45,'Forest Carbon Partnership Facility - Carbon Fund'],
+['World Bank',320,'Clean Technology Fund'],
+['World Bank',180.921,'Clean Technology Fund'],
+['World Bank',25,'International CCS capacity building'],
+['World Bank',50,'BioCarbon Fund'],
+['World Bank',7,'Programme for Market Readiness'],
+['World Bank',25,'Forest Investment Programme'],
+['World Bank',15,'Pilot Program for Climate Resilience'],
+['World Bank',25,'Scaling up Renewable Energy'],
+['World Bank',40,'CP3 - Catalyst Fund'],
+['World Bank',15,'Colombia Silvopastoral Systems'],
+['World Bank',35,'Carbon Market Finance'],
+['NAMA Facility',70,'Improve architecture for climate finance'],
+['Global Climate Partnership Fund',30,'Drive private investment'],
+['Get FiT',25.5,'Drive private investment'],
+['International CCS capacity building',60,'Support deployment of technologies critical to 2 degree goal'],
+['CP3 - Catalyst Fund',40,'Drive private investment'],
+['CP3 - Asia Climate Partners',35.25,'Drive private investment'],
+['Green Investment Bank International Pilot',0.197,'Drive private investment'],
+['Capital Markets Climate Intiative',0.411,'Drive private investment'],
+['International 2050 Calculator',1.8,'Build capacity to respond to climate change'],
+['Green Africa Power',25,'Drive private investment'],
+['Forest Carbon Partnership Facility - Carbon Fund',45,'Protect forests'],
+['Clean Technology Fund',320,'Drive private investment'],
+['Clean Technology Fund',180.921,'Improve architecture for climate finance'],
+['BioCarbon Fund',50,'Protect forests'],
+['Programme for Market Readiness',7,'Build capacity to respond to climate change'],
+['Forest Investment Programme',25,'Protect forests'],
+['Pilot Program for Climate Resilience',15,'Adapting to climate change'],
+['Scaling up Renewable Energy',25,'Support deployment of technologies critical to 2 degree goal'],
+['Colombia Silvopastoral Systems',15,'Protect forests'],
+['Carbon Market Finance',35,'Improve architecture for climate finance']
 ]);
       sankey.draw();
     </script>
