--- a/index.html
+++ b/index.html
@@ -30,7 +30,26 @@
                       'Other',
                       'PIDG',
                       'World Bank']);
-      sankey.stack(2,["Good","Bad"]);
+      sankey.stack(2,[
+        'NAMA Facility',
+        'Global Climate Partnership Fund',
+        'Get FiT',
+        'International CCS capacity building',
+        'CP3 - Catalyst Fund',
+        'CP3 - Asia Climate Partners',
+        'Green Investment Bank International Pilot',
+        'Capital Markets Climate Intiative',
+        'International 2050 Calculator',
+        'Green Africa Power',
+        'Forest Carbon Partnership Facility - Carbon Fund',
+        'Clean Technology Fund',
+        'BioCarbon Fund',
+        'Programme for Market Readiness',
+        'Forest Investment Programme',
+        'Pilot Program for Climate Resilience',
+        'Scaling up Renewable Energy',
+        'Colombia Silvopastoral Systems',
+        'Carbon Market Finance']);
     
       sankey.setData([
 ['DECC ICF Budget',91,'KfW'],
