--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
         'Scaling up Renewable Energy',
         'Colombia Silvopastoral Systems',
         'Carbon Market Finance']);
+      
+      sankey.stack(3, [
+      'Improve architecture for climate finance',
+      'Drive private investment',
+      'Support deployment of technologies critical to 2 degree goal',
+      'Build capacity to respond to climate change',
+      'Protect forests',
+      'Adapting to climate change'
+      ]);
     
       sankey.setData([
 ['DECC ICF Budget',91,'KfW'],
