--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
       'Protect forests',
       'Adapting to climate change'
       ]);
+      
+      sankey.y_space = 20;
+      sankey.right_margin = 250;
+      sankey.left_margin = 150;
+      sankey.convert_flow_values_callback = function(finance_flow) {
+        return finance_flow * 0.5; // Pixels per £M
+      };
     
       sankey.setData([
 ['DECC ICF Budget',91,'KfW'],
