--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
       'Adapting to climate change'
       ]);
       
+        sankey.setColors({
+          "World Bank":"#8F6F38",
+        });
+      
       sankey.y_space = 20;
       sankey.right_margin = 300;
       sankey.left_margin = 120;
