--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       ]);
       
         sankey.setColors({
-          "World Bank":"#8F6F38",
+          "World Bank":"#8F6F38"
         });
       
       sankey.y_space = 20;
