--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
       'Adapting to climate change'
       ]);
       
+      /* See http://www.w3schools.com/tags/ref_colorpicker.asp for how to define colours */
         sankey.setColors({
-          "World Bank":"#8F6F38"
+          "World Bank":"#3D7A99"
         });
       
       sankey.y_space = 20;
