--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
       var sankey = new Sankey();
     
       sankey.stack(0,["DECC ICF Budget"]);
-      sankey.stack(1,['KfW',
+      sankey.stack(1,['World Bank',
+                      'KfW',
                       'ADB',
                       'GiZ',
                       'Green Investment Bank',
                       'Other',
-                      'PIDG',
-                      'World Bank']);
+                      'PIDG'
+                      ]);
       sankey.stack(2,[
+        'Clean Technology Fund',
         'NAMA Facility',
         'Global Climate Partnership Fund',
         'Get FiT',
@@ -42,7 +44,6 @@
         'International 2050 Calculator',
         'Green Africa Power',
         'Forest Carbon Partnership Facility - Carbon Fund',
-        'Clean Technology Fund',
         'BioCarbon Fund',
         'Programme for Market Readiness',
         'Forest Investment Programme',
