--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
 ['Other',1.8,'International 2050 Calculator'],
 ['PIDG',25,'Green Africa Power'],
 ['World Bank',45,'Forest Carbon Partnership Facility - Carbon Fund'],
-['World Bank',320,'Clean Technology Fund'],
-['World Bank',180.921,'Clean Technology Fund'],
+['World Bank',320+180.921,'Clean Technology Fund'],
 ['World Bank',25,'International CCS capacity building'],
 ['World Bank',50,'BioCarbon Fund'],
 ['World Bank',7,'Programme for Market Readiness'],
