Moved PIDG up list

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
                       'KfW',
                       'ADB',
                       'GiZ',
+                      'PIDG',
                       'Green Investment Bank',
-                      'Other',
-                      'PIDG'
+                      'Other'
+                      
                       ]);
       sankey.stack(2,[
         'Clean Technology Fund',
